@@ -22,3 +22,4 @@ depth: 1
  * Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
  * Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
  * Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
+ * Update Algolia DocSearch to use new application and correct versioning setup (Thibaud Colas)
