@@ -23,3 +23,4 @@ depth: 1
  * Fix dialog component's message to have rounded corners at the top side (Sam)
  * Prevent matches from unrelated models from leaking into SQLite FTS searches (Matt Westcott)
  * Prevent duplicate addition of StreamField blocks with the new block picker (Deepam Priyadarshi)
+ * Update Algolia DocSearch to use new application and correct versioning setup (Thibaud Colas)
