@@ -1,3 +1,3 @@
 myst_parser==0.18.1
-sphinx-wagtail-theme==5.3.2
+sphinx-wagtail-theme==6.0.0
 sphinx-copybutton>=0.5,<1.0
